cmake_minimum_required(VERSION 3.10)
project(FruitNinjaClone)
find_package(OpenCV REQUIRED)
find_package(SFML 2.5 COMPONENTS audio system window graphics REQUIRED)
add_executable(FruitNinja main.cpp)
include_directories(${OpenCV_INCLUDE_DIRS} ${SFML_INCLUDE_DIR})
target_link_libraries(FruitNinja ${OpenCV_LIBS} sfml-audio sfml-system sfml-window sfml-graphics)
